# dz_19_2

./: .env.sample  .gitignore  README.md  catalog_data.json  group.json  pyproject.toml
catalog/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_product_manufactured_at.py  0003_remove_category_category_and_more.py  0004_version.py  0005_alter_version_product.py  0006_product_owner.py  0007_alter_product_options.py  0008_product_is_published.py
catalog/templates/: home.html  products_detail.html  products_list.html
catalog/templates/catalog/: contacts.html  home.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_menu.html
catalog/templates/includes/: inc_menu.html
config/: settings.py  urls.py
posts/: models.py  urls.py  views.py
posts/migrations/: 0001_initial.py
posts/templates/posts/: post_detail.html  post_form.html  post_list.html
posts/templates/posts/includes/: inc_card.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_token.py  0003_alter_user_managers.py
users/templates/users/: login.html  reset-password.html  user_form.html
