[tool.poetry]
name = "dz-19-2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2 = "^2.9.9"
black = "^24.4.2"
pillow = "^10.4.0"
ipython = "^8.26.0"
pytils = "^0.4.1"
sqlparse = "^0.5.1"
django = "4.2.2"
django-widget-tweaks = "^1.5.0"
redis = "^5.0.8"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
